syntax = "proto3";
package pb;
option go_package = "./peerpb";

// **************************************************** 通用 ***************************************************** //

//Platform 平台
enum Platform {
  Ios = 0; // ios
  Android = 1; // android
  Web = 2; // web
  Windows = 3; // windows
  Mac = 4; // mac
  Linux = 5; // linux
  Ipad = 6; // ipad
  AndroidPad = 7; // android pad
}

//RequestHeader 请求头
message RequestHeader {
  string appId = 1; // 应用id
  string userId = 2; // 用户id
  string clientIp = 3; // 客户端ip
  string installId = 4; // 安装后向服务器注册的UUID
  Platform platform = 5; // 平台
  string deviceModel = 6; // 设备型号
  string osVersion = 7; // 操作系统版本
  string appVersion = 8; // app版本
  string extra = 9; // 额外信息
}

//ResponseCode
enum ResponseCode {
  SUCCESS = 0; // 成功
  INVALID_DATA = 1; // 无效的数据
  UNAUTHORIZED = 2; // 未授权
  FORBIDDEN = 3; // 禁止访问
  INVALID_METHOD = 4; // 无效的方法
  TIMEOUT = 5; // 超时
  SERVER_ERROR = 6; // 服务器错误
}

//ResponseActionType 客户端收到响应后做的动作类型
enum ResponseActionType {
  NONE_ACTION = 0; // 无动作
  TOAST_ACTION = 1; // toast提示
  ALERT_ACTION = 2; // alert提示
  SECOND_AUTH_ACTION = 3; // 二次认证 一段时间内没有进行二次验证 而且此次是高危操作 此时客户端应该弹出二次验证界面 验证短信验证码
}

//ToastActionData toast提示 客户端根据level显示不同的颜色 可能持续不同的时间
message ToastActionData {
  enum Level {
    INFO = 0; // 信息
    WARN = 1; // 警告
    ERROR = 2; // 错误
  }
  Level level = 1; // 级别
  string message = 2; // 消息 i18n
}

//AlertActionData alert提示 永远有一个关闭按钮 以下描述的是另一个操作按钮
message AlertActionData {
  enum ButtonType {
    NO_BUTTON = 0; // 无按钮
    JUMP_URL = 1; // 跳转url
  }
  string title = 1; // 标题 i18n
  string message = 2; // 消息 i18n
  ButtonType buttonType = 3; // 按钮类型
  string buttonLabel = 4; // 按钮标签 i18n
  string buttonData = 5; // 按钮数据
}

//ResponseHeader 响应头
message ResponseHeader {
  ResponseCode code = 1; // 错误码
  ResponseActionType actionType = 2; // 动作类型
  string actionData = 3; // 动作数据 json字符串
  string extra = 4; // 额外信息
}

// **************************************************** 网关 *****************************************************  //

//GatewayApiRequest 网关api请求
message GatewayApiRequest {
  RequestHeader header = 1;
  string requestId = 2;
  string nonce = 3;
  string path = 4;
  bytes body = 5;
}

//GatewayApiResponse 网关api响应
message GatewayApiResponse {
  ResponseHeader header = 1;
  string requestId = 2;
  string nonce = 3;
  uint32 timestamp = 4;
  string path = 5;
  bytes body = 6;
}

//GatewayWriteDataType 写入数据类型
enum GatewayWriteDataType {
  //返回响应
  Response = 0;
  //主动推送message
  PushMessage = 1;
  //主动推送notice
  PushNotice = 2;
}

//GatewayWriteDataContent 写入数据内容
message GatewayWriteDataContent {
  //写入数据类型
  GatewayWriteDataType dataType = 1;
  //响应
  optional GatewayApiResponse response = 2;
  //主动推送message
  optional Message message = 3;
  //主动推送notice
  optional Notice notice = 4;
}

// **************************************************** 网关:连接 *****************************************************  //

//LongConnection 长连接
message LongConnection {
  RequestHeader header = 1; // 请求头
  string podIp = 2; // pod ip
  uint32 podPort = 3; // pod port
  uint32 connectTime = 4; // 连接时间
}


// **************************************************** 会话 *****************************************************  //

//ConversationType 会话类型
enum ConversationType {
  // 单聊
  Single = 0;
  // 群聊
  Group = 1;
  // 频道
  Channel = 2;
}

// **************************************************** 通知 *****************************************************  //

//NoticeContentType 通知内容类型
enum NoticeContentType {
  // 有新的好友请求
  NewFriendRequest = 0;
  // 加入到了新群
  JoinNewGroup = 1;
  // 在线状态
  OnlineStatus = 2;
}

//Notice 通知
message Notice {
  //通知id 因为通知永远都是服务端发送给客户端的，所以通知id一定唯一。
  string noticeId = 1;
  //发送到哪个会话
  string conversationId = 2; // 单聊: 那么该值为发送者和接受者的id；群聊：那么该值为群id；订阅号：那么该值为订阅号id
  //会话类型
  ConversationType conversationType = 3;
  //通知内容
  string content = 4;
  //通知类型
  NoticeContentType contentType = 5;
  //通知的更新时间
  uint32 updateTime = 6;
  //排序
  uint32 sort = 7;
}

// **************************************************** 消息 *****************************************************  //

//MessageContentType 消息内容类型
enum MessageContentType {
  // 图文
  Text = 0;
  // Markdown
  Markdown = 1;
  // 图片
  Image = 2;
  // 语音
  Voice = 3;
  // 视频
  Video = 4;

  // 正在输入
  Typing = 101;
  // 已读
  Read = 102;
  // 撤回
  Recall = 103;
}

//Message 消息
message Message {
  //MessageId 消息id 由服务端插入时生成
  string messageId = 1;
  //UUID 客户端生成的id 由客户端生成 在客户端保证唯一性
  string uuid = 2;

  //发送到哪个会话
  string conversationId = 3; // 单聊: 那么该值为接受者的id；群聊：那么该值为群id；订阅号：那么该值为订阅号id
  //会话类型
  ConversationType conversationType = 4;
  //发送者
  message Sender {
    //发送者id
    string id = 1;
    //发送者名称
    string name = 2;
    //发送者头像
    string avatar = 3;
    //extra
    string extra = 11;
  }
  Sender sender = 5; // 有可能是系统 那么该值为空

  //消息内容
  bytes content = 6;
  //消息类型
  MessageContentType contentType = 7;

  //发送时间 由客户端生成
  uint32 sendTime = 8;
  //插入时间 由服务端生成
  uint32 insertTime = 9;
  //在会话中的消息顺序
  uint32 seq = 10;

  //选项
  message Option {
    //服务端是否保存该消息
    bool storageForServer = 1;
    //客户端是否保存该消息
    bool storageForClient = 2;
    //是否需要解密 （端对端加密技术，服务端无法解密）
    bool needDecrypt = 3;
    //消息是否需要计入未读数
    bool countUnread = 4;
  }
  Option option = 16;
  //extraMap, example: {"platformSource": "windows"}
  map<string, string> extraMap = 17;
}

// **************************************************** 会话 *****************************************************  //

// **************************************************** 会话:频道 *****************************************************  //
//UserChannel 用户订阅的频道
message UserChannel {
  string channelId = 1;
  string userId = 2;
  uint32 subscribeTime = 3;
  map<string, string> extraMap = 6;
}
